# naver-macro-api

./: README.md  pyproject.toml  run.py
src/: main.py
src/customTypes/: __init__.py  cafeMenu.py  naverCafe.py
src/dtos/: __init__.py  getNaverCafesDTO.py  postBlogDTO.py
src/types/: naverCafe.py  naverCredential.py
