[tool.poetry]
name = "naver-macro"
version = "0.1.0"
description = ""
authors = ["soohyeok8901 <devshk447@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
webdriver-manager = "^4.0.1"
pydantic = "^2.6.2"
python-dotenv = "^1.0.1"
selenium = "^4.18.1"

[tool.poetry.scripts]
start = "run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
